# neural-network

./: Cargo.toml  readme.txt
src/: flex_net.rs  layer_topology.rs  lib.rs  soft_net.rs
